[package]
name = "sendme"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.76"
futures = "0.3.29"
iroh-bytes = "0.12.0"
iroh-net = "0.12.0"
rand = "0.8.5"
walkdir = "2.4.0"
tokio-util = "0.7.10"
tokio = "1.35.1"
flume = "0.11.0"
num_cpus = "1.16.0"
hex = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
